# SVM

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  cite.bibtex
demo/Benchmark/: main.cpp  plotter.py
demo/BenchmarkHardSeparate/: main.cpp  plotter.py
demo/BreastCancerWisconsin/: main.cpp
demo/GenerateTestSample/: main.cpp
demo/LinearSVMBenchmark/: main.cpp  plotter.py
demo/NonLinearSVMBenchmark/: main.cpp  plotter.py
demo/NonlinearSVMBenchmark/: main.cpp  plotter.py
modules/: SVM.hpp
modules/DataLoader/: BreastCancerWisconsinLoader.hpp
modules/LinearTestSampleGenerator/: LinearTestSampleGenerator.hpp
modules/Optimizer/: LinearSMO.hpp  SMO.hpp
modules/SVM/: SVM.hpp
modules/Sample/: Sample.hpp
modules/SegmentPlane/: SegmentPlane.hpp
modules/TestSampleGenerator/: LinearTestSampleGenerator.hpp  MoonTestSampleGenerator.hpp  TestSampleGenerator.hpp
modules/common/: common.hpp
